# choose_or_challenge_bot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: CI_of_source.yml  CI_of_tests.yml
bot/: __main__.py  config.py
bot/commands/: __init__.py  bot_commands_description.py  help.py  start.py
